--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Berry - Dulces Momentos</title>
-    <link rel="icon" type="image/png" href="Documentos/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
     <style>
         /* Paleta de Colores basada en tu imagen */
         :root {
